VM-全家桶/grafana/grafana-deploy.yaml
# grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: tensuns
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-disk-pvc
      #securityContext:
      #  runAsUser: 0
      containers:
        - name: grafana
          image: kerrysmart-registry-vpc.cn-shanghai.cr.aliyuncs.com/tools/grafana:11.6.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: grafana
          readinessProbe:
            failureThreshold: 10
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 150m
              memory: 512Mi
            requests:
              cpu: 150m
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tensuns
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
